# pyawscron

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
pyawscron/: __init__.py  awscron.py  commons.py  occurrence.py
tests/: test_helper_method.py  test_next.py  test_parse.py  test_prev.py
